assets/css/main.scss
---
# Use a comment to ensure Jekyll reads the file to be transformed into CSS later
# only main files contain this front matter, not partials.
---
$sidebar-bg-color: #2b4861;
$heading-color: #2b4861;
$link-color: #2b4861;
$alert-padding: 12px;
strong {color: #2b4861;}
.content a.link-button {
  font-weight: bold;
  display: block;
  text-align: center;
  border: 2px solid black;
  padding: 8px;
  border-radius: 5px;
  margin: 18px;
}
.logoimg{
  padding:20px;
}
footer {
  text-align: center;
}
.callout {
  text-align: center;
  padding: $alert-padding;
  border-radius: 3px;
  margin-bottom: 60px;
  &.caution {
    color: black;
    background-color: lightyellow;
    border: 1px solid black;
    strong {
      color: black;
    }
  }
  &.warning {
    color: darkred;
    background-color: pink;
    border: 1px solid darkred;
    strong {
      color: darkred;
    }
  }
  &.info {
    color: black;
    background-color: lightblue;
    border: 1px solid black;
    strong {
      color: black;
    }
  }
}
@media (max-width: 49rem){
  footer a {
    color: white !important;
  }
  footer {
    color: white !important;
  }
}
@media (min-width: 49rem){
  .container > .callout {
    padding: $alert-padding;
  }
}
@import "hydeout";

